TEST_PROGRAMS/INVALID/prabhjot_sandhu/mixeddeclstmt.min
var x: int;

x = 10;

var y:int;

y = 10;

